<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BayunRC-Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Sandbox keys -->
    <string name="application_key_sandbox">enter_your_sandbox_application_key_here</string>
    <string name="application_secret_key_sandbox">enter_your_sandbox_application_secret_key_here</string>


    <!-- Production keys -->
    <string name="application_key_prod">enter_your_production_application_key_here</string>
    <string name="application_key_secret_prod">enter_your_production_application_secret_key_here</string>

    <!-- Bayun Base URL-->
    <string name="base_url">enter_your_bayun_base_url_here</string>

    <!-- application id-->
    <string name="app_id">enter_your_app_id_here</string>
    <!-- application secret -->
    <string name="app_secret">enter_your_app_secret_here</string>
    <!-- application salt -->
    <string name="app_salt">enter_your_application_salt_here</string>





    <!--list view file activity values-->
    <string name="more_options">More</string>

    <!--create new file activity values-->
    <string name="sender_name">Sender Name</string>

    <string name="please_wait">Please wait…</string>
    <string name="incomplete_fields_error_message">Please complete all fields below.</string>
    <string name="incompatible_type_error_message">Please enter numeric values.</string>
    <string name="string_extension">Extension</string>
    <string name="login">Login</string>
    <string name="phoneNumber">Phone Number (digits only)</string>
    <string name="passWord">Password</string>
    <string name="messages">Messages</string>
    <string name="extension">Select Extension</string>
    <string name="list_view_message_list_empty">No messages found</string>

    <string name="send">Send</string>
    <string name="message_placeholder_text">Your Message…</string>
    <string name="point_to_sandbox">Point to Sandbox Server</string>


</resources>
