
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/app_bg"
    android:id="@+id/login_activity_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:gravity="center"
            android:layout_centerInParent="true"
            android:id="@+id/activity_login_main_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/activity_login_icon"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/phone_number"
                android:background="@drawable/rounded_corner_edit_text"
                android:layout_below="@id/activity_login_icon"
                android:padding="5dp"
                android:hint="@string/phoneNumber"
                android:layout_marginTop="15dp"
                android:textColor="@color/light_black"
                android:textSize="22sp"
                android:inputType="phone"
                android:maxLines="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/extension"
                android:background="@drawable/rounded_corner_edit_text"
                android:layout_below="@id/phone_number"
                android:padding="5dp"
                android:hint="@string/string_extension"
                android:layout_marginTop="15dp"
                android:textColor="@color/light_black"
                android:textSize="22sp"
                android:inputType="number"
                android:maxLines="1" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/passcode"
                android:background="@drawable/rounded_corner_edit_text"
                android:padding="5dp"
                android:hint="@string/passWord"
                android:layout_below="@id/extension"
                android:layout_marginTop="15dp"
                android:textColor="@color/light_black"
                android:textSize="22sp"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login"
                android:id="@+id/login_button"
                android:enabled="true"
                android:onClick="loginClick"
                android:layout_below="@id/passcode"
                android:clickable="true"
                android:textColor="@color/background"
                android:background="@drawable/rounded_corner_register_button"
                android:layout_marginTop="10dp"
                android:textSize="22sp" />

            <CheckBox
                android:id="@+id/sandbox_server_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:layout_gravity="start|left"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:buttonTint="@color/white"
                android:text="@string/point_to_sandbox"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

            </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/progressBar"
            android:clickable="true"
            android:focusable="true"
            android:background="@color/progress_bar_bg"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>
    </RelativeLayout>

</ScrollView>


