<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_list_extensions_navigation_bar"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:background="@color/background">

        <ImageView
            android:id="@+id/activity_view_message_back_image_view"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backButtonImageClick"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_ab_back_holo_dark_am"/>


        <TextView
            android:id="@+id/sender_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sender_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </RelativeLayout>

    <!-- A RecyclerView with some commonly used attributes -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_files_recycler_view"
        android:layout_above="@+id/line"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_list_extensions_navigation_bar" />

    <TextView
     android:id="@+id/empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:gravity="center"
     android:visibility="gone"
    android:text="@string/list_view_message_list_empty"/>

    <View
        android:id="@+id/line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/form"
        android:layout_marginBottom="5dp"
        android:background="@color/line_background" />

    <RelativeLayout
        android:id="@+id/form"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_toLeftOf="@+id/send" >

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_rounded_edit_text"
            android:hint="@string/message_placeholder_text"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:padding="7dp"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="8dp"
        android:background="@android:color/transparent"
        android:minWidth="0dp"
        android:text="@string/send"
        android:onClick="sendClick"
        android:textColor="@color/disabled" />

</RelativeLayout>
